--- a/demo/codonist/index.html
+++ b/demo/codonist/index.html
@@ -462,11 +462,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-wp">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MAISONS IANNI</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MAISONS IANNI"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MAISONS IANNI"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -475,11 +475,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ACRODIA</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ACRODIA"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ACRODIA"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -488,11 +488,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Majoitus</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Majoitus"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Majoitus"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -501,11 +501,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/4.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Avidanbank</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Avidanbank"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Avidanbank"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -514,11 +514,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/5.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>KNIGHT OF COLUMBUS</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="KNIGHT OF COLUMBUS"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="KNIGHT OF COLUMBUS"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -553,11 +553,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>CAAFinancial</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="CAAFinancial"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="CAAFinancial"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -566,11 +566,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Carasti</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Carasti"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Carasti"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
