--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
     </div>
 
     <div class="main">
+        <h3>logo Animation</h3>
+        <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="yLKZjvB" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/codonist/pen/yLKZjvB">
+            Untitled</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+    </div>
+
+    <div class="main">
         <h3>Stars Animation</h3>
         <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="ExoawMe" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
             <span>See the Pen <a href="https://codepen.io/codonist/pen/ExoawMe">
@@ -166,14 +176,7 @@
     </div>
 
 
-<div class="main">
-    <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="yLKZjvB" data-user="codonist" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-        <span>See the Pen <a href="https://codepen.io/codonist/pen/yLKZjvB">
-        Untitled</a> by Hamayun Aziz (<a href="https://codepen.io/codonist">@codonist</a>)
-        on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-</div>
+
     <!-- JavaScript
 ================================================== -->
 
