--- a/demo/animation/index.html
+++ b/demo/animation/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <title>Animation</title>
    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css?ver=1.0.4'>
    <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
    <!-- partial:index.partial.html -->
-   <section class="iq-features">
+   <section class="iq-features">   
       <div class="container">
          <div class="row align-items-center">
             <div class="col-lg-7 col-md-12">
@@ -25,22 +23,22 @@
                   </div>
                   <div class="contentCircle">
                      <div class="CirItem CirItem1">
-                        <img src="./images/uk1.JPG" alt="">
+                        <img src="./images/img1.jpg" alt="" >
                      </div>
                      <div class="CirItem CirItem2">
-                        <img src="./images/uk1.JPG" alt="">
+                        <img src="./images/img2.jpg" alt="" >
                      </div>
                      <div class="CirItem CirItem3">
-                        <img src="./images/uk1.JPG" alt="">
+                        <img src="./images/img3.jpg" alt="" >
                      </div>
                      <div class="CirItem CirItem4">
-                        <img src="./images/uk1.JPG" alt="">
+                        <img src="./images/img4.jpg" alt="" >
                      </div>
                      <div class="CirItem CirItem5">
-                        <img src="./images/uk1.JPG" alt="">
+                        <img src="./images/img5.jpg" alt="" >
                      </div>
                      <div class="CirItem CirItem6">
-                        <img src="./images/uk1.JPG" alt="">
+                        <img src="./images/img6.jpg" alt="" >
                      </div>
                   </div>
                </div>
@@ -79,5 +77,4 @@
    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
    <script src="./script.js"></script>
 </body>
-
 </html>
