--- a/demo/imperium-jets/index.html
+++ b/demo/imperium-jets/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/demo/imperium-jets/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
     <title>Imperium Jets</title>
-    <script type="module" crossorigin src="/assets/index.0b3d5d52.js"></script>
-    <link rel="stylesheet" href="/assets/index.3031bb78.css">
+    <script type="module" crossorigin src="/demo/imperium-jets/assets/index.37e533ba.js"></script>
+    <link rel="stylesheet" href="/demo/imperium-jets/assets/index.528685f8.css">
   </head>
   <body>
     <div id="app"></div>
@@ -17,6 +17,6 @@
 
 
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/demo/imperium-jets/js/main.js"></script>
   </body>
 </html>
