--- a/demo/imperium-jets/index.html
+++ b/demo/imperium-jets/index.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/demo/imperium-jets/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.0/css/lightgallery-bundle.min.css">
-    <title>Imperium Jets</title>
-    <script type="module" crossorigin src="/demo/imperium-jets/assets/index.e36535ee.js"></script>
-    <link rel="stylesheet" href="/demo/imperium-jets/assets/index.79a9f694.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/demo/imperium-jets/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.0/css/lightgallery-bundle.min.css">
+  <title>Imperium Jets</title>
+
+  <!-- Accessibility Code for "www.impjets.com" -->
+  <script> window.interdeal = { "sitekey": "3fc785d60aeb1bcd7993873c063dc466", "Position": "Right", "Menulang": "EN", "domains": { "js": "https://cdn.equalweb.com/", "acc": "https://access.equalweb.com/" }, "btnStyle": { "vPosition": ["80%", null], "scale": ["0.6", "0.6"], "color": { "main": "#0a51f2" }, "icon": { "type": 1, "shape": "semicircle", "outline": false } } }; (function (doc, head, body) { var coreCall = doc.createElement('script'); coreCall.src = 'https://cdn.equalweb.com/core/4.4.0/accessibility.js'; coreCall.defer = true; coreCall.integrity = 'sha512-3lGJBcuai1J0rGJHJj4e4lYOzm7K08oEHsg1Llt7x24OOsa/Ca0wwbSi9HhWUn92FKN3fylaq9xmIKVZnUsT3Q=='; coreCall.crossOrigin = 'anonymous'; coreCall.setAttribute('data-cfasync', true); body ? body.appendChild(coreCall) : head.appendChild(coreCall); })(document, document.head, document.body); </script>
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MS2Z5VH89W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-MS2Z5VH89W');
+  </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
+
+
+  <!-- Hotjar Tracking Code for https://www.impjets.com -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 2907474, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+  <!-- End Hotjar Tracking Code for https://www.impjets.com -->
+  <script type="module" crossorigin src="/demo/imperium-jets/assets/index.9bf0cc1a.js"></script>
+  <link rel="stylesheet" href="/demo/imperium-jets/assets/index.ee841d0d.css">
+</head>
+
+<body>
+  <div id="app"></div>
+  
+
+  <script src="./js/lightgallery.min.js"></script>
+  <script src="./js/video.js"></script>
+</body>
+
 </html>
