--- a/demo/boda-ui/done-reenter.html
+++ b/demo/boda-ui/done-reenter.html
@@ -6,84 +6,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css"
-          integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+        integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Done</title>
 </head>
 
 <body>
 
-<header class="main-header bg-blue">
-    <div class="container">
-        <h6 class="title">החתונה של</h6>
-        <h2 class="title">איציק & מיקה</h2>
-    </div>
-</header>
-
-<section class="done-content">
-    <div class="container">
-
-        <div class="done-inner-content">
-            <div class="check-circle">&#10004</div>
-            <h2>יפה מאוד!</h2>
-            <h3>בחרת את מקום הישיבה שלך
-                ובחרת את המנות המועדפות עליך</h3>
-            <h4>עכשיו רק נשאר להתלבש יפה
-                ולהגיע לאירוע.</h4>
-            <p>נתראה בחתונה
-                יהיה שמח!</p>
+    <header class="main-header bg-blue">
+        <div class="container">
+            <h6 class="title">החתונה של</h6>
+            <h2 class="title">איציק & מיקה</h2>
         </div>
+    </header>
 
-        <div class="done-section-buttons">
-            <a href="/">
-                <img src="./assets/images/email-svgrepo-com 1.png" alt="">
-                שלח לי סיכום לאימייל
-            </a>
-            <a href="/">
-                <img src="./assets/images/path-svgrepo-com 1.png" alt="">
-                שמירת האירוע ליומן
-            </a>
-            <a href="/">
-                <img src="./assets/images/calendar-symbol-svgrepo-com 1.png" alt="">
-                האולם, דרכי הגעה וחניה
-            </a>
+    <section class="done-content">
+        <div class="container">
+
+            <div class="reenter-inner-content">
+                <div class="check-circle">&#10004</div>
+                <h2>מקום ישיבה: שולחן 8, כסא B.</h2>
+                <h2 style="margin-bottom: 17px;"> מנות נבחרות: בורקס פטריות, מדליוני פילה.</h2>
+                <h3>יום חמישי - ג’ אייר תשנ”פ</h3>
+                <h3>25.10.2021</h3>
+                <h3>קבלת פנים ב-19:00</h3>
+                <h3>חופה וקידושין ב-20:00</h3>
+                <p>נתראה בחתונה - יהיה שמח!</p>
+            </div>
+
+            <div class="done-section-buttons">
+                <a href="/">
+                    <img src="./assets/images/icons/email-svgrepo-com 1.png" alt="">
+                    שלח לי סיכום לאימייל
+                </a>
+                <a href="/">
+                    <img src="./assets/images/icons/path-svgrepo-com 1.png" alt="">
+                    שמירת האירוע ליומן
+                </a>
+                <a href="/">
+                    <img src="./assets/images/icons/calendar-symbol-svgrepo-com 1.png" alt="">
+                    האולם, דרכי הגעה וחניה
+                </a>
+            </div>
+
         </div>
+    </section>
 
-    </div>
-</section>
+    <section class="wizard-section">
+        <div class="container">
+            <div class="wizard-steps">
+                <div class="step active">
+                    <p>אישור<br>
+                        הזמנה</p>
+                    <span>1</span>
+                </div>
+                <div class="step active">
+                    <p>איפה<br>
+                        יושבים?</p>
+                    <span>2</span>
+                </div>
+                <div class="step active">
+                    <p>מה<br>
+                        אוכלים?</p>
+                    <span>3</span>
+                </div>
 
-<secton class="wizard-section">
-    <div class="container">
-        <div class="wizard-steps">
-            <div class="step active">
-                <p>אישור<br>
-                    הזמנה</p>
-                <span>1</span>
-            </div>
-            <div class="step active">
-                <p>איפה<br>
-                    יושבים?</p>
-                <span>2</span>
-            </div>
-            <div class="step active">
-                <p>מה<br>
-                    אוכלים?</p>
-                <span>3</span>
-            </div>
-
-            <div class="step active">
-                <p>יאללה <br>חתונה!</p>
-                <span>4</span>
+                <div class="step active">
+                    <p>יאללה <br>חתונה!</p>
+                    <span>4</span>
+                </div>
             </div>
         </div>
-    </div>
-</secton>
+    </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
