--- a/demo/boda-ui/choose-table.html
+++ b/demo/boda-ui/choose-table.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css"
         integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Choose Table</title>
 </head>
@@ -26,7 +28,7 @@
                     <h2 class="title">החתונה של איציק & מיקה</h2>
                 </div>
                 <div class="header-left">
-                    <button><img src="./assets/images/back button.png" alt=""></button>
+                    <button><img src="./assets/images/icons/back-button.svg" alt=""></button>
                     <p>חזרה</p>
                 </div>
             </div>
@@ -44,29 +46,29 @@
                 </div>
                 <table class="borderless">
                     <tr>
-                        <td><a href=""><img src="./assets/images/table-gray.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table-gray.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table-gray.png" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-gray.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-gray.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-gray.svg" alt=""></a></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href=""><img src="./assets/images/table.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table.png" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-blue.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-blue.svg" alt=""></a></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href=""><img src="./assets/images/table.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table.png" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-blue.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-blue.svg" alt=""></a></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href=""><img src="./assets/images/table.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table.png" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-blue.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-blue.svg" alt=""></a></td>
                     </tr>
                     <tr>
-                        <td><a href=""><img src="./assets/images/table-gray.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table-gray.png" alt=""></a></td>
-                        <td><a href=""><img src="./assets/images/table-gray.png" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-gray.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-gray.svg" alt=""></a></td>
+                        <td><a href=""><img src="./assets/images/table-gray.svg" alt=""></a></td>
                     </tr>
 
                 </table>
@@ -75,7 +77,9 @@
     </section>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="./assets/jquery/main.js"></script>
