--- a/demo/boda-ui/index.html
+++ b/demo/boda-ui/index.html
@@ -91,15 +91,17 @@
                     <p>אולי אתה צריך זמן לחשוב על זה...<br>
                         תרצה לקבל תזכורת מאיתנו
                         בעוד שלושה ימים?</p>
-
-                    <a href="" class="reminder">כן, אני רוצה תזכורת</a>
-                    <p>לא, תודה.
+                        <div>
+                            <a href="" class="reminder">כן, אני רוצה תזכורת</a>
+                        </div>
+                    <p>לא, תודה.<br>
                         לצערי, אני לא אוכל להגיע לאירוע.</p>
                 </div>
                 <button type="button" class="btn close-app">לחץ כאן לביטול הגעה לאירוע</button>
             </div>
         </div>
     </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.6.1.js"
