--- a/demo/boda-ui/survey.html
+++ b/demo/boda-ui/survey.html
@@ -68,7 +68,18 @@
                 </ul>
             </div>
             <div class="survey-popup-btn">
-                <button>שליחהוסיום</button>
+                <button><a href="#popup1">שליחהוסיום</a></button>
+            </div>
+            <div id="popup1" class="overlay">
+                <div class="popup">
+                    <h2>תודה שענית על סקר 
+                        שביעות הרצון שלנו</h2>
+                    <p>אנחנו אוהבים פידבק, אז אם יש 
+                        לכם מילה טובה, ביקורת או הצעה, 
+                        אנחנו פה ונשמח לשמוע.</p>
+                    <img src="./assets/images/icons/survey-icon.svg" alt="popup-image">
+                    <div><a href="#">ניתן לסגור כעת את חלון הדפדפן</a></div>
+                </div>
             </div>
         </div>
     </section>
