--- a/demo/boda-ui/venue.html
+++ b/demo/boda-ui/venue.html
@@ -15,6 +15,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css'>
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Venue</title>
 </head>
@@ -63,31 +65,58 @@
         </div>
     </section>
 
-    <section class="venue-maps">
+    <section class="venue-area">
         <div class="container">
-            <div class="google-map">
-                <div class="mapouter">
-                    <div class="gmap_canvas"><iframe height="500" id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                            href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"></a><br>
-                        <a href="https://www.embedgooglemap.net">google maps widget html</a>
-                        
-                    </div>
+
+            <div class="mapouter">
+                <div class="gmap_canvas"><iframe height="206" id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                        href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"></a><br>
                 </div>
             </div>
+
+            <div class="venue-gallery">
+                <h2>חנייה</h2>
+                <h3>חניה במקום בשפע וחינם</h3>
+                <h2>גלריית תמונות</h2>
+            </div>
+
+            <div class="wrapper">
+                <div class="carousel">
+                    <div><img src="./assets/images/venue.png"></div>
+                    <div><img src="./assets/images/venue.png"></div>
+                    <div><img src="./assets/images/venue.png"></div>
+                    <div><img src="./assets/images/venue.png"></div>
+                    <div><img src="./assets/images/venue.png"></div>
+                    <div><img src="./assets/images/venue.png"></div>
+                </div>
+            </div>
+
+            <div class="venue-discription">
+                <p>
+                    אירועים עסקיים בעדן. עדן גן האירועים פותח את שעריו ללקוחות עסקיים ומציע סטנדרט חדש של בילוי ואירוח –
+                    אירועי קונספט בהתאמה אישית. הסביבה הטבעית, המטבח המשובח...
+                </p>
+            </div>
+
         </div>
     </section>
 
-
-    <script src="https://code.jquery.com/jquery-3.6.1.js"
-        integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js'></script>
     <script src="./assets/jquery/main.js"></script>
+
+    <script>
+        $('.carousel').slick({
+            centerMode: true,
+            centerPadding: '60px',
+            slidesToShow: 1,
+            rtl: true,
+            arrows: false,
+            dots: false,
+        });
+    </script>
 
 </body>
 
